<resources>
    <string name="app_name">ProfitApp</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="username">Username</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="routines">Routines</string>
    <string name="favorites">Favorites</string>
    <string name="home">Home</string>
    <string name="profileImage">Profile Image</string>
    <string name="profile">Profile</string>
    <string name="log_out">Log Out</string>
    <string name="log_out_msg">"Are you sure you want to log out?"</string>
    <string name="confirm">Yes</string>
    <string name="deny">No</string>
    <string name="category">Category</string>
    <string name="date">Date</string>
    <string name="difficulty">Difficulty</string>
    <string name="rating">Rating</string>
    <string name="rate_now">Rate Now</string>
    <string name="start">Start</string>
    <string name="order_button_title">Order by</string>
    <string name="fav_added">Routine added to favorites</string>
    <string name="fav_removed">Routine removed from favorites</string>
    <string name="rated">Routine rated successfully!</string>
    <string name="weight_progress_title">My Weight Progress</string>
    <string name="exit">Exit</string>
    <string name="no_weight_avail">There doesn\'t seem to be any weight logged.</string>
    <string name="add_weight_title">Log a new weight</string>
    <string name="add_weight_msg">Please enter your current weight.</string>
    <string name="done">Done</string>
    <string name="cancel">Cancel</string>
    <string name="my_routines">My Routines</string>
    <string name="simplified_view">Simplified View: For a more practical experience.</string>
    <string name="detailed_view">Detailed View: For a more comprehensive experience.</string>
    <string name="routine_mode">Routine Display</string>
    <string name="seconds">seconds</string>
    <string name="repetitions">repetitions</string>
    <string name="remaining_cycle_reps">Remaining Repetitions: </string>
    <string name="next_exercises">Next Exercises: </string>
    <string name="remaining_exercises">Remaining Exercises: </string>
    <string name="close_routine">Stop Execution</string>
    <string name="close_routine_msg">Are you sure you want to stop the execution?</string>
    <string name="invalid_user">Username must be at least 3 characters long.</string>
    <string name="invalid_password">Password must be at least 8 characters long.</string>
    <string name="cannot_execute">This routine is not complete for execution.</string>
    <string name="ordering_by">Ordering by:</string>

</resources>