<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="cycle"
            type="ar.edu.itba.hci.profitapp.api.model.Cycle" />
<!--        <variable-->
<!--            name="exercise"-->
<!--            type="ar.edu.itba.hci.profitapp.api.model.Exercise"/>-->

        <variable
            name="cycleExercise"
            type="ar.edu.itba.hci.profitapp.api.model.CycleExercise"/>
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <TextView
            android:id="@+id/routine_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:text="@{cycle.name}"
            android:textAlignment="center"
            android:textColor="@color/teal_700"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <!--        <ProgressBar-->
        <!--            android:id="@+id/routineProgressBar"-->
        <!--            style="?android:attr/progressBarStyleHorizontal"-->
        <!--            android:layout_width="0dp"-->
        <!--            android:layout_height="wrap_content"-->
        <!--            android:layout_marginStart="32dp"-->
        <!--            android:layout_marginEnd="32dp"-->
        <!--            android:layout_marginBottom="16dp"-->
        <!--            app:layout_constraintBottom_toTopOf="@+id/cardView2"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            android:indeterminate="true"-->
        <!--            android:indeterminateTint="@color/teal_light"/>-->

        <TextView
            android:id="@+id/remaining_cycles"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/remaining_cycle_reps"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/routine_name" />

        <TextView
            android:id="@+id/rem_cycle_rep"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toEndOf="@+id/remaining_cycles"
            app:layout_constraintTop_toBottomOf="@+id/routine_name" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cardView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="32dp"
            app:cardPreventCornerOverlap="true"
            app:cardUseCompatPadding="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/remaining_cycles"
            card_view:cardCornerRadius="8dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@drawable/outlined_card">

                <TextView
                    android:id="@+id/exercise_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{cycleExercise.exercise.name}"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/exercise_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@{cycleExercise.exercise.detail}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_name" />

                <TextView
                    android:id="@+id/exercise_time"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@{cycleExercise.duration.toString()}"
                    app:layout_constraintEnd_toStartOf="@+id/seconds"
                    app:layout_constraintHorizontal_bias="0.0"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_detail" />

                <TextView
                    android:id="@+id/seconds"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/seconds"
                    app:layout_constraintEnd_toStartOf="@+id/separator"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/exercise_time"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_detail" />

                <TextView
                    android:id="@+id/separator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="16dp"
                    android:layout_marginEnd="8dp"
                    android:text="·"
                    app:layout_constraintEnd_toStartOf="@+id/exercise_repetitions"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/seconds"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_detail" />

                <TextView
                    android:id="@+id/exercise_repetitions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@{cycleExercise.repetitions.toString()}"
                    app:layout_constraintEnd_toStartOf="@+id/times"
                    app:layout_constraintHorizontal_bias="0.5"
                    app:layout_constraintStart_toEndOf="@+id/separator"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_detail" />

                <TextView
                    android:id="@+id/times"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/repetitions"
                    app:layout_constraintStart_toEndOf="@+id/exercise_repetitions"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_detail" />

                <androidx.cardview.widget.CardView
                    android:id="@+id/cardView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/exercise_time">

                    <androidx.constraintlayout.widget.ConstraintLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/exercise_image"
                            android:layout_width="300dp"
                            android:layout_height="300dp"
                            android:scaleType="fitXY"
                            android:src="@drawable/ic_baseline_photo_24"
                            app:layout_constraintBottom_toBottomOf="parent"
                            app:layout_constraintEnd_toEndOf="parent"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toTopOf="parent" />
                    </androidx.constraintlayout.widget.ConstraintLayout>

                </androidx.cardview.widget.CardView>

                <TextView
                    android:id="@+id/counter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:layout_marginBottom="16dp"
                    android:textSize="34sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/cardView" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.cardview.widget.CardView>

        <!--        <ProgressBar-->
        <!--            android:id="@+id/exercise_progress"-->
        <!--            style="?android:attr/progressBarStyle"-->
        <!--            android:layout_width="66dp"-->
        <!--            android:layout_height="62dp"-->
        <!--            android:layout_marginTop="24dp"-->
        <!--            app:layout_constraintEnd_toEndOf="parent"-->
        <!--            app:layout_constraintStart_toStartOf="parent"-->
        <!--            app:layout_constraintTop_toBottomOf="@+id/cardView2"-->
        <!--            android:indeterminate="true"-->
        <!--            android:indeterminateTint="@color/teal_light"-->
        <!--            />-->

        <ImageButton
            android:id="@+id/pauseButton"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/nextButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/stop_button"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:tint="@color/teal"
            card_view:srcCompat="@drawable/ic_baseline_play_arrow_24" />

        <ImageButton
            android:id="@+id/stop_button"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginStart="32dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/pauseButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:tint="@color/teal"
            card_view:srcCompat="@drawable/ic_baseline_stop_24" />

        <ImageButton
            android:id="@+id/nextButton"
            android:layout_width="46dp"
            android:layout_height="47dp"
            android:layout_marginEnd="32dp"
            android:background="@android:color/transparent"
            android:scaleType="fitCenter"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/pauseButton"
            app:layout_constraintTop_toBottomOf="@+id/cardView2"
            app:tint="@color/teal"
            card_view:srcCompat="@drawable/ic_baseline_skip_next_24" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>